# reply_challenge_2023

./: .pdm.toml  README.md  pyproject.toml  run.py
outputs/: 00-example.txt-result.txt  01-chilling-cat.txt-result.txt  03-input-anti-greedy.txt-result.txt  04-input-low-points.txt-result.txt  05-input-opposite-points-holes.txt-result.txt
src/: model.py  parser.py  score.py  solver.py
tests/: test_available_position.py  test_parse_input.py  test_parse_output.py  test_score.py
