[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Milan Suk", email = "Milansuk@email.cz"},
]
dependencies = [
    "black>=23.1.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.2",
]

[tool.pdm.scripts]
test = "pytest tests"
format = "black src tests"
